Istio Service Mesh Config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: global-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port: { number: 80, name: http, protocol: HTTP }
      hosts: ["*"]
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: global-routing
spec:
  hosts: ["*"]
  gateways: ["global-gateway"]
  http:
    - match: [{ uri: { prefix: /users } }]
      route: [{ destination: { host: user-service, port: { number: 6000 } } }]
    - match: [{ uri: { prefix: /products } }]
      route: [{ destination: { host: product-service, port: { number: 7000 } } }]
